# CESMII_TOOLS

./: LICENSE  README-Git-Cheatsheet.md  README.md
AIML/GenerativeAI/GoogleAI/: README  pyproject.toml
AIML/GenerativeAI/GoogleAI/Agents/gadkdev/: pyproject.toml
AIML/GenerativeAI/GoogleAI/basicGeminiAI/: README
AIML/GenerativeAI/GoogleAI/basicGeminiAI/PythonGeminiAPI/: 10-image-generation.py  11-image-edit.py  13-multiprompt-images.py  14-video-generator.py  15-video-imagen.py  16-structured.py  17-speech-generate.py  19-promptoaudio.py  20-generate-music.py  22-functioncall.py  28-chart-function.py  29-chart-function-multi.py  30-light-function.py  34-live-sound.py  35-mcpserver.py  36-documentpdf.py  38-uploadaudio.py  4-system-instruct.py  40-transcript.py  41-google-search.py  42-coding.py  44-livefunction.py  5-generate-content.py  50-travel_queries_with_chat_function.py  6-image-analysis-tocsv.py  6-image-analysis.py
AIML/GenerativeAI/LangChainGraphAI/: README  pyproject.toml
AIML/GenerativeAI/LangChainGraphAI/Agents/: 5-agentsSQL.ipynb
AIML/GenerativeAI/LangChainGraphAI/Basic/: 1-Classify.ipynb  2-promptTemplates.ipynb  3-semanticsearch.ipynb  4-sqlquerry.ipynb
AIML/GenerativeAI/MCPDev/mcpsrvclt/: pyproject.toml
AIML/GenerativeAI/OpenAI/OpenAIAPI/: README-UV.md  pyproject.toml
AIML/GenerativeAI/OpenAI/OpenAIAPI/PythonAPI/: 1-quickstart-response.py  10-translation.py  11-async-example.py  12-text-to-audio.py  13-generate_image.py  14-generate-image-followup.py  15-image-streaming.py  16-display-image.py  17-display-image-matplot.py  18-display-image-cv2.py  19-text-to-speech.py  2-chatcompletion.py  20-stream-realtime-audio.py  21-speech-to-text.py  22-test-agent.py  23-embeddings.py  24-token_count.py  25-assistant.py  26-function_call.py  27-audiofiletotext.py  28-streamingaudio.py  29-largaudiofiletotext.py  3-analyze-image.py  3-analyze-localimage.py  3-analyze-localmultipleimage.py  30-largeaudiofiletotext.py  31-textToMarkdown.py  32-imagecreate.py  33-create_image.py  34-cartoon_image.py  35-cartoon_img.py  (+10 more)
(+293 files in other folders)
