[project]
name = "basicgeminiai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopy>=2.4.1",
    "google-genai>=1.26.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "mcp>=1.12.0",
    "openai>=1.97.0",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pygame>=2.6.1",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "soundfile>=0.13.1",
    "timezonefinder>=6.6.2",
]
