[project]
name = "mcpsrvclt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopy>=2.4.1",
    "google-genai>=1.21.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "openai>=1.91.0",
    "openai-agents>=0.0.19",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
